selfhost/test/parser/typeidentifiers_error_empty_tuple.out
Error at %FILE_NAME%:1:10
Unexpected end of file:
  |  val _: ()
              ^